@startuml
'https://plantuml.com/class-diagram

class Cancion {
    - nombre: String
    - album: Album
    - cantLikes: Integer
    - cantDislikes: Integer
    - anioLanzamiento: Integer
    - cantReproducciones: Integer
    - ultimaReproduccion: Tiempo
    - popularidad: Popularidad
}

class Artista {
    - nombre: String

}

class Album {
    - nombre: String
    - artista: Artista
    - anio: Integer
}

Cancion o--> Album
Album o--> Artista

@enduml